# dcmatrix

./: .gitignore  CMakeLists.txt
include/dcmatrix/: Dcmatrix.hpp
include/facet/: Facet3.hpp
include/facet3/: Facet3.hpp
src/dcmatrix/: Dcmatrix.cpp  Dcmatrix.test.cpp
src/facet/: Facet3.cpp  Facet3.test.cpp
src/facet3/: Facet3.cpp  Facet3.test.cpp
tests/: CMakeLists.txt  test.cpp
tools/: CMakeLists.txt  gtest.cmake
tools/google-test/: CMakeLists.txt
